--- a/source/build.settings
+++ b/source/build.settings
@@ -1,21 +1,6 @@
 settings = {
-	orientation = 
-	{
+	orientation = {
 		default = "landscapeRight", 
 		supported = { "landscapeLeft", "landscapeRight" },
 	},
-	
-	iphone =
-	{
-		plist =
-		{
-			CFBundleIconFile = "Icon.png",
-			CFBundleIconFiles = {
-					"Icon.png",
-					"Icon@2x.png",
-					"Icon-72.png",
-			}
-		},
-	},
-
 }
